--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     // Show greeting when "Yes" is clicked
     yesBtn.addEventListener("click", () => {
-      greetDiv.textContent = "🎉 Yay! I knew you’d say YES! 🎉";
+      greetDiv.textContent = "🎉 Yay! I knew you’d say YES! I like you too beautiful ❤️ 🎉";
     });
   </script>
 </body>
